examples/test/testpolicy3751.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3751
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key17: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value3
          key41: value43
      podSelector:
        matchLabels:
          key33: value2
          key6: value23
          key26: value38
